[fix] inline edit class on Step inputs no longer overflows

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -144,6 +144,11 @@ input, .inlineEdit {
   -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
   
 }
+.scenario .step input[type="text"] {
+  margin-left:0px;
+  width:96%;
+}
+
 .scenario select {float:left; margin-right:10px;}
 
 .scenario li {
